[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "createcart-api"
version = "0.1.0"
description = "CreateCart HTTP API — serves the menu registry (and future cart/payment/delivery SDKs) to JS frontends."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CreateCart" }]
license = { text = "Proprietary" }
# NOTE: the three Python SDKs live in the createcart-sdks monorepo and are
# installed from local paths until a private registry exists:
#   pip install -e ../createcart-sdks/packages/registry \
#               -e ../createcart-sdks/packages/cart \
#               -e ../createcart-sdks/packages/payment
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/createcart_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
